# decision-intelligence-assistant

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  logging.py
backend/app/routers/: compare.py  health.py  llm.py  predict_llm.py  predict_ml.py  rag.py
backend/app/schemas/: comparison.py  prediction.py  query.py
backend/app/services/: feature_extractor.py  llm_client.py  ml_model.py  vector_store.py
backend/chroma_data/42200186-eb0d-46e3-8a55-da7c3d5236ec/: index_metadata.pickle
backend/tests/: test_compare.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: index.js
frontend/src/components/: AnswerPanel.jsx  ComparisonTable.jsx  QueryInput.jsx  SourcePanel.jsx
frontend/src/styles/: AnswerPanel.css  App.css  ComparisonTable.css  QueryInput.css  SourcePanel.css  index.css
notebooks/: priority_model.ipynb
